# i2cat-assignment

./: .gitignore  CMakeLists.txt  README.md
include/: data.h  shader.h
include/glad/: glad.h
shaders/: fragment.glsl  fragment_p1.glsl  vertex.glsl  vertex_p1.glsl  vertex_p2.glsl
src/: glad.c  main.cpp  main_part1.cpp  main_part2.cpp
